Fixed achievements errors; added alignment CSS

--- a/_assets/css/index.scss
+++ b/_assets/css/index.scss
@@ -122,3 +122,44 @@ $iucrc-navy: #005ea2;
     margin-top: 1em;
   }
 }
+
+.fill-h {
+  width: 100%;
+}
+
+// ---------- extracted from align.module.css
+
+/**
+ * @file
+ * Alignment classes for text and block level elements.
+ */
+
+ .text-align-left {
+  text-align: left;
+}
+.text-align-right {
+  text-align: right;
+}
+.text-align-center {
+  text-align: center;
+}
+.text-align-justify {
+  text-align: justify;
+}
+
+/**
+ * Alignment classes for block level elements (images, videos, blockquotes, etc.)
+ */
+.align-left {
+  float: left;
+}
+.align-right {
+  float: right;
+}
+.align-center {
+  display: block;
+  margin-right: auto;
+  margin-left: auto;
+}
+
+// ---------- END OF extracted from align.module.css
